--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "moment-timezone": "^0.5.11"
   },
   "devDependencies": {
-    "eslint": "^3.14.0",
+    "eslint":"^2.4.0",
+    "@markit/eslint-config-markit": "^0.3.0",
     "mocha": "^3.2.0"
   }
 }
