--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   ],
   "contributors": [
     {
+      "name": "Mark Healey",
+      "email": ""
+    },
+    {
       "name": "Brian Baker",
       "email": "brian.baker@ihsmarkit.com"
     },
