--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,25 @@
 {
   "extends": [
-	"@markit/eslint-config-markit",
-	"@markit/eslint-config-markit/node",
-	"@markit/eslint-config-markit/es6"
+	"airbnb"
 	],
 	"rules": {
 		"brace-style": [2, "1tbs", { "allowSingleLine": true }],
 		"object-shorthand": 0,
 		"spaced-comment": 0,
-		"no-invalid-this": 0
+		"no-invalid-this": 0,
+		"linebreak-style": ["error", "windows"],
+		"no-tabs": 0,
+		"padded-blocks": 0,
+		"indent": [2, "tab", { "SwitchCase": 1 }],
+		"strict": 0,
+		"func-names": 0,
+		"space-before-function-paren": [2, { "anonymous": "never", "named": "never" }],
+		"global-require": 0,
+		"max-len": [0, 100, 4, {
+			"ignoreUrls": true,
+			"ignoreComments": true
+		}],
+		"comma-dangle": [2, "never"],
+		"no-underscore-dangle": 0
 	}
 }
