--- a/package.json
+++ b/package.json
@@ -46,7 +46,11 @@
     "moment-timezone": "^0.5.11"
   },
   "devDependencies": {
-    "eslint": "^2.4.0",
+    "eslint": "^3.13.0",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
     "mocha": "^3.2.0"
   }
 }
