tweaking lint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
 			"ignoreComments": true
 		}],
 		"comma-dangle": [2, "never"],
-		"no-underscore-dangle": 0
+		"no-underscore-dangle": 0,
+		"no-empty-function": 1
 	}
 }
