--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
 		"object-shorthand": 0,
 		"spaced-comment": 0,
 		"no-invalid-this": 0,
-		"linebreak-style": ["error", "windows"],
+		"linebreak-style": 0,
 		"no-tabs": 0,
 		"padded-blocks": 0,
 		"indent": [2, "tab", { "SwitchCase": 1 }],
