--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,10 @@
 		}],
 		"comma-dangle": [2, "never"],
 		"no-underscore-dangle": 0,
-		"no-empty-function": 1
+		"no-empty-function": 1,
+		"no-param-reassign": 0
+	},
+	"env":{
+		"amd": true
 	}
 }
