converts arrow function

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,8 @@
 		"comma-dangle": [2, "never"],
 		"no-underscore-dangle": 0,
 		"no-empty-function": 1,
-		"no-param-reassign": 0
+		"no-param-reassign": 0,
+		"prefer-arrow-callback": 0
 	},
 	"env":{
 		"amd": true
