shuts off no-var

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,8 @@
 		"no-underscore-dangle": 0,
 		"no-empty-function": 1,
 		"no-param-reassign": 0,
-		"prefer-arrow-callback": 0
+		"prefer-arrow-callback": 0,
+		"no-var": 0
 	},
 	"env":{
 		"amd": true
