--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -4,6 +4,7 @@
   },
   "rules":{
     // assert.throws doesnt respond to lambda syntax
-    "prefer-arrow-callback": 0
+    "prefer-arrow-callback": 0,
+    "vars-on-top": 0
   }
 }
