--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,8 @@
 		"comma-dangle": [2, "never"],
 		"no-underscore-dangle": 0,
 		"no-empty-function": 1,
-		"no-param-reassign": 0
+		"no-param-reassign": 0,
+		"no-var":"off",
+		"prefer-arrow-callback": 0
 	}
 }
