--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,6 @@
 		"no-param-reassign": 0,
 		"no-var":"off",
 		"prefer-arrow-callback": 0,
-		"prefer-tamplate": false
+		"prefer-tamplate": 0
 	}
 }
