--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Adds OLE Automation parsing capabilities to Moment.js",
   "main": "moment-msdate.js",
   "scripts": {
-    "lint": "eslint ./test ./moment-msdate.js !./node-modules",
+    "lint": "eslint ./test ./moment-msdate.js",
     "mocha": "mocha --check-leaks --reporter=spec ./test",
     "test": "npm run lint && npm run mocha"
   },
@@ -17,8 +17,7 @@
     "msdate",
     "ole-automation"
   ],
-  "contributors": [
-    {
+  "contributors": [{
       "name": "Mark Healey",
       "email": ""
     },
@@ -42,19 +41,19 @@
   },
   "homepage": "https://github.com/markitondemand/moment-msdate#readme",
   "dependencies": {
-    "moment": "^2.17.1",
-    "moment-timezone": "^0.5.11"
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23"
   },
   "devDependencies": {
-    "eslint": "^3.13.0",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
-    "grunt": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-eslint": "^19.0.0",
-    "grunt-mocha-test": "^0.13.2",
-    "mocha": "^3.2.0"
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "grunt": "^1.0.3",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-eslint": "^21.0.0",
+    "grunt-mocha-test": "^0.13.3",
+    "mocha": "^6.0.2"
   }
 }
