--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moment-msdate",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Adds OLE Automation parsing capabilities to Moment.js",
   "main": "moment-msdate.js",
   "scripts": {
@@ -17,7 +17,8 @@
     "msdate",
     "ole-automation"
   ],
-  "contributors": [{
+  "contributors": [
+    {
       "name": "Mark Healey",
       "email": ""
     },
